--- a/atkm/src/app/shared/components/atk-api/atk-api.component.html
+++ b/atkm/src/app/shared/components/atk-api/atk-api.component.html
@@ -93,5 +93,7 @@
 <!-- SIDEBAR -->
 <!-- ======================= -->
 @if (state(); as stt) {
-<atk-api-sidebar [isCollapsed]="stt.sidebarCollapsed" (togglePanel)="toggleSidebar()" />
+<atk-api-sidebar [isCollapsed]="stt.sidebarCollapsed" (togglePanel)="toggleSidebar()"
+  (loadRequest)="onSidebarLoadRequest()" />
+
 }
